# bignums

./: .gitignore  .travis.yml  BigNumPrelude.v  CHANGELOG.md  META.coq-bignums.in  Make  Makefile  Makefile.coq.local  README.md  _CoqProject  bignums_syntax.ml  bignums_syntax_plugin.mlpack  coq-bignums.opam  default.nix  dune  dune-project  meta.yml  numbers_syntax.ml  rocq-bignums.opam
.github/workflows/: build-coq-bignums.yml  docker-action.yml
BigN/: BigN.v  NMake.v  Nbasic.v  dune
BigQ/: BigQ.v  QMake.v
BigZ/: BigZ.v  ZMake.v
CyclicDouble/: DoubleAdd.v  DoubleBase.v  DoubleCyclic.v  DoubleDiv.v  DoubleDivn1.v  DoubleLift.v  DoubleMul.v  DoubleSqrt.v  DoubleSub.v
SpecViaQ/: QSig.v
SpecViaZ/: .lia.cache  NSig.v  NSigNAxioms.v  ZSig.v  ZSigZAxioms.v
plugin/: bignums_syntax.ml  dune
src/plugin/: dune
src/theories/: BigNumPrelude.v  dune
src/theories/BigN/: dune
src/theories/BigQ/: QMake.v
src/theories/CyclicDouble/: DoubleLift.v
src/util/: dune
tests/: Makefile
tests/output/: NumbersSyntax.out  NumbersSyntax.v
tests/success/: NumberScopes.v  bigQ.v
