opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/bignums"
dev-repo: "git+https://github.com/coq-community/bignums.git"
bug-reports: "https://github.com/coq-community/bignums/issues"
license: "LGPL-2.1-only"

synopsis: "Bignums, the Coq library of arbitrarily large numbers"
description: """
This Coq library provides BigN, BigZ, and BigQ that used to
be part of the standard library."""

build: [make "-j%{jobs}%"]
run-test: [make "-C" "tests" "-j%{jobs}%"]
install: [make "install"]
depends: [
  "ocaml" 
  "coq" {= "dev"}
]

tags: [
  "category:Miscellaneous/Coq Extensions"
  "category:Mathematics/Arithmetic and Number Theory/Number theory"
  "category:Mathematics/Arithmetic and Number Theory/Rational numbers"
  "keyword:integer numbers"
  "keyword:rational numbers"
  "keyword:arithmetic"
  "keyword:arbitrary precision"
  "logpath:Bignums"
]
authors: [
  "Laurent Théry"
  "Benjamin Grégoire"
  "Arnaud Spiwack"
  "Evgeny Makarov"
  "Pierre Letouzey"
]
