opam-version: "2.0"
maintainer: "pierre.roux@onera.fr"
version: "dev"

homepage: "https://github.com/coq-community/bignums"
dev-repo: "git+https://github.com/coq-community/bignums.git"
bug-reports: "https://github.com/coq-community/bignums/issues"
license: "LGPL-2.1-only"

synopsis: "Bignums, the Coq library of arbitrarily large numbers"
description: """
This Coq library provides BigN, BigZ, and BigQ that used to
be part of the standard library."""

build: [make "-j%{jobs}%"]
install: [
  [make "install"]
  [make "-C" "tests" "-j%{jobs}%"] {with-test}
]
depends: [
  "ocaml"
  "rocq-core" {= "dev"}
  "coq-stdlib"
]

tags: [
  "category:Miscellaneous/Coq Extensions"
  "category:Mathematics/Arithmetic and Number Theory/Number theory"
  "category:Mathematics/Arithmetic and Number Theory/Rational numbers"
  "keyword:integer numbers"
  "keyword:rational numbers"
  "keyword:arithmetic"
  "keyword:arbitrary precision"
  "logpath:Bignums"
]
authors: [
  "Laurent Théry"
  "Benjamin Grégoire"
  "Arnaud Spiwack"
  "Evgeny Makarov"
  "Pierre Letouzey"
]
